--- a/Responsive Web Design(NEW)/9 Tribute Page/styles.css
+++ b/Responsive Web Design(NEW)/9 Tribute Page/styles.css
@@ -1,1 +1,14 @@
+#main {
+  background: #f1be82;
+}
 
+#title {
+  text-align: center;
+  padding-top: 5px;
+}
+
+#image {
+  display: block;
+  max-width: 100%;
+  height: auto;  
+}
