--- a/Responsive Web Design(NEW)/9 Tribute Page/styles.css
+++ b/Responsive Web Design(NEW)/9 Tribute Page/styles.css
@@ -10,5 +10,12 @@
 #image {
   display: block;
   max-width: 100%;
-  height: auto;  
+  height: auto;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+h3 {
+  text-align: center;
+  padding-bottom: 5px;
 }
