--- a/Responsive Web Design(NEW)/9 Tribute Page/styles.css
+++ b/Responsive Web Design(NEW)/9 Tribute Page/styles.css
@@ -14,6 +14,12 @@
   margin-left: auto;
   margin-right: auto;
 }
+#img-caption {
+  text-align: center;
+  font-family: Verdana;
+  font-size: min(2vw, 1.2em);
+  padding: 5px;
+}
 
 h3 {
   text-align: center;
