--- a/Responsive Web Design(NEW)/9 Tribute Page/styles.css
+++ b/Responsive Web Design(NEW)/9 Tribute Page/styles.css
@@ -14,11 +14,17 @@
   margin-left: auto;
   margin-right: auto;
 }
+
 #img-caption {
   text-align: center;
   font-family: Verdana;
   font-size: min(2vw, 1.2em);
   padding: 5px;
+}
+
+#tribute-info {
+  font-size: min(1.1em);
+  padding: 0 15px;
 }
 
 h3 {
