--- a/Responsive Web Design(NEW)/16 Product Landing Page/styles.css
+++ b/Responsive Web Design(NEW)/16 Product Landing Page/styles.css
@@ -1,5 +1,31 @@
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+body {
+    background-color: #dee;
+    font-family: 'Lato', sans-serif;
+}
+
+#header {
+    position: fixed;
+    top: 0;
+    min-height: 75px;
+    padding: 0px 20px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    background-color: #eee;
+}
 
 #nav-bar {
   top: 0;
   position: fixed;
+  display: flex;
+}
+
+#main {
+  height: 300px;
 }
