--- a/Responsive Web Design(NEW)/16 Product Landing Page/styles.css
+++ b/Responsive Web Design(NEW)/16 Product Landing Page/styles.css
@@ -9,7 +9,7 @@ body {
     font-family: 'Lato', sans-serif;
 }
 
-#header {
+/* #header {
     position: fixed;
     top: 0;
     min-height: 75px;
@@ -18,7 +18,7 @@ body {
     justify-content: space-around;
     align-items: center;
     background-color: #eee;
-}
+} */
 
 #nav-bar {
   top: 0;
@@ -28,4 +28,10 @@ body {
 
 #main {
   height: 300px;
+}
+
+@media only screen and (max-width: 400px) {
+  body {
+    font-size: 2rem;
+  }
 }
